<resources>
    <string name="app_name">SchelasVans</string>
    <string name="navigation_drawer_open">Abrir drawer</string>
    <string name="navigation_drawer_close">Fechar drawer</string>
    <string name="nav_header_title">SchelasVans</string>
    <string name="nav_header_subtitle">schelasinc@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">Sobre</string>

    <string name="loginFail">Falha no login!</string>
    <string name="tryAgain">Tente novamente</string>
    <string name="rUser">Usuário</string>
    <string name="rPass">Senha</string>
    <string name="rPassConf">Confirme a senha</string>
    <string name="errorEmail">Email</string>
    <string name="rBtnRegistro" >Registre-se</string>
    <string name="rAlreadyHave" >Já tem conta?</string>
    <string name="rLogin" >Login</string>
    <string name="RegFail" >Houve falha no registro.</string>
    <string name="TryAgain" >Tente novamente</string>
    <string name="actCadPass" >Cadastro de Passageiro</string>
    <string name="actRegister" >Registro de Usuário</string>
    <string name="errorGeneral" >Há campos inválidos. Verifique e tente novamente.</string>
    <string name="rEmail" >Email</string>
    <string name="lbEmail">Digite seu email</string>
    <string name="lbUser">Nome de usuário</string>
    <string name="lbPass">Senha</string>
    <string name="lbConfPass">Confirme a senha</string>
    <string name="lRegister">Registre-se</string>
    <string name="lLogin">Login</string>
    <string name="loginFailInval">Dados inválidos.</string>
    <string name="back_button">Back button</string>
    <string name="regFail">Registro falhou!</string>
    <string name="apiOffline">Serviço indisponível no momento.</string>
    <string name="actPass">Passageiros</string>
    <string name="lbNomePass">Nome</string>
    <string name="lbEmailCadPass">Email</string>
    <string name="lbFoneCadPass">Telefone</string>
    <string name="btnCadPass">Cadastrar</string>
    <string name="btnCad">Cadastrar</string>
    <string name="lbAddressCadPass">Endereço</string>
    <string name="lbAddressNumCadPass">Número</string>
    <string name="lbAddressBairroCadPass">Bairro</string>
    <string name="lbAddressCidadeCadPass">Cidade</string>
    <string name="emailInvalid">Email inválido</string>
    <string name="nomeInvalid">Campo \"Nome\" inválido</string>
    <string name="phoneInvalid">Campo \"Telefone\" inválido</string>
    <string name="campoInvalid">Campo inválido</string>
    <string name="cadastroFail">Houve algum problema com o cadastro.</string>
    <string name="dadosPessoais">Dados Pessoais</string>
    <string name="lbNomeCadPass">Nome</string>
    <string name="Endereco">Endereço</string>
    <string name="actDetailPass">Passageiro</string>
    <string name="passPlaceholderNome">Nome do Passageiro</string>
    <string name="detailPassVerMapa">Ver no Mapa</string>
    <string name="passPlaceholderPhone">Telefone</string>
    <string name="passPlaceholderAddress">Endereço</string>
    <string name="detPass">Passageiro</string>

    <string name="google_maps_key">AIzaSyBbdeCeTEyhOaS_LdgbmPD_v0-vbE3DOyk</string>
    <string name="addressNotExist">Endereço não existe. Atualize o cadastro.</string>
    <string name="OK">OK</string>
    <string name="actCadDest">Cadastro de Destinos</string>
    <string name="actCadVeic">Cadastro de Veiculos</string>
    <string name="veiculo">Veículo</string>
    <string name="placa">Placa</string>
    <string name="cor">Cor</string>
    <string name="modelo">Modelo</string>
    <string name="marca">Marca</string>
    <string name="capacidade">Capacidade</string>
    <string name="cadastro">Cadastrar</string>
    <string name="destino">Destino</string>
    <string name="rua">Logradouro</string>
    <string name="num">Nº</string>
    <string name="bairro">Bairro</string>
    <string name="city">Cidade</string>
    <string name="actDest">Destinos</string>
    <string name="descricao">Descrição</string>
    <string name="actDetailDest">Destinos</string>
    <string name="destinoCidade">Cidade</string>
    <string name="destinoPlaceholderNome">Nome do Destino</string>
    <string name="detDest">Destino</string>
    <string name="actDetailVeic">Veiculo</string>
    <string name="veiculoPlaceholderNome">Desc do Veiculo</string>
    <string name="actVeic">Veiculo</string>
    <string name="detVeic">Veiculo</string>
    <string name="menuPerfil">Perfil</string>
    <string name="menuRota">Rotas</string>
    <string name="menuRelatorio">Relatórios</string>
    <string name="menuItemCadastros">Cadastros</string>
    <string name="menuPassageiros">Passageiros</string>
    <string name="menuVeiculos">Veiculos</string>
    <string name="menuDestinos">Destinos</string>
    <string name="menuItemDef">Configurações</string>
    <string name="menuAlocacao">Passageiros</string>
    <string name="menuItemOther"></string>
    <string name="menuLogout">Logout</string>
    <string name="menuAbout">Sobre</string>
    <string name="navAlocar">Alocação</string>
    <string name="actAlocar">Alocação</string>
    <string name="actHome">Home</string>
    <string name="welcome">Bem-Vindo ao</string>
    <string name="bSchelas">SchelasVans</string>
    <string name="textHome">\t\tGerencie viagens, passageiros e vans de sua empresa de uma maneira mais eficaz e inteligente com o SchelasVans!</string>
    <string name="actAbout">About</string>
    <string name="sobre">Sobre</string>
    <string name="sobre2">\tO SchelasVans é um gerenciador de frotas de vans. \n\tO Projeto está sendo desenvolvido para o TCC pela Universidade Tuiuti do Paraná</string>
    <string name="sobreFunc">\tAlgumas das funcionalidades que o sistema oferece são: \n\n\t- Cadastro de passageiros, veículos e destinos; \n\n\t- Alocar passageiros e destinos para as vans; \n\n\t- Disponibilizar rotas das viagens; \n\n\t- Gerar relatórios.</string>
    <string name="sobre3">\tEste projeto foi iniciado no dia 12/03/2019 e o primeiro protótipo finalizado no dia 23/06/2019.</string>
    <string name="sobre4">\t\t\t\t\t\t\tDesenvolvedores: \nWiltencir Garcia - Github: WiltencirDG \nBruno Teixeira - Github: BrunoTeixeira1999 \nAndré Bortollotti - Github: andrebragaa</string>
    <string name="actRelatorio">Relatório</string>
    <string name="actCadRel">Relatório</string>
    <string name="navAbout">About</string>
    <string name="actSobre">Sobre</string>
    <string name="actAloc">Alocar</string>
    <string name="btnAtt">Atualizar</string>
    <string name="nonePass"><![CDATA[<Nenhum passageiro cadastrado>]]></string>
    <string name="noneDest"><![CDATA[<Nenhum destino cadastrado>]]></string>
    <string name="noneVeic"><![CDATA[<Nenhum veiculo cadastrado>]]></string>
    <string name="actAlocPV">Alocar Passageiros no Veiculo</string>
    <string name="actRota">Rota</string>
    <string name="actAlocRD">Alocar Rota</string>
    <string name="actAlocVR">Alocar Veiculo na Rota</string>
    <string name="menuAlocaPass">Passageiros</string>
    <string name="menuAlocaVeic">Veiculos</string>
    <string name="actRotas">Rotas</string>
    <string name="RotaVeiculo">Veiculo</string>
    <string name="navRotas">Rotas</string>
    <string name="actMapa">Mapa</string>
    <string name="actRotaVeiculo">Carregar rota no mapa</string>
    <string name="menuChecklist">Checklist</string>
    <string name="actChecklist">Checklist</string>
    <string name="saveCheck">Salvar Presença</string>
    <string name="navChecklist">Checklist</string>
    <string name="passPlaceholderEmail">Email</string>


</resources>
