<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rotas"
            android:icon="@drawable/ic_rotas_24dp"
            android:title="@string/menuRota" />
        <item
            android:id="@+id/nav_relatorios"
            android:icon="@drawable/ic_relatorio_24dp"
            android:title="@string/menuRelatorio" />

        <item
            android:id="@+id/nav_checklist"
            android:icon="@drawable/ic_checklist_24dp"
            android:title="@string/menuChecklist" />

    </group>

    <item android:title="@string/menuItemCadastros">
        <menu>
            <item
                android:id="@+id/nav_passageiros"
                android:icon="@drawable/ic_passageiros_24dp"
                android:title="@string/menuPassageiros" />
            <item
                android:id="@+id/nav_veiculos"
                android:icon="@drawable/ic_vans_24dp"
                android:title="@string/menuVeiculos" />
            <item
                android:id="@+id/nav_dest"
                android:icon="@drawable/ic_destinos_24dp"
                android:title="@string/menuDestinos" />
        </menu>
    </item>

    <item android:title="@string/menuItemDef">
        <menu>
            <item
                android:id="@+id/nav_passVeic"
                android:icon="@drawable/ic_passveic_24dp"
                android:title="@string/menuAlocaPass" />
            <item
                android:id="@+id/nav_veicDest"
                android:icon="@drawable/ic_veicrota_24dp"
                android:title="@string/menuAlocaVeic" />
        </menu>
    </item>

    <item android:title="@string/menuItemOther">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about_24dp"
                android:title="@string/menuAbout" />
        </menu>
    </item>

</menu>
