<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/destool"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent">

        <ImageView
            android:id="@+id/imgNavBar"
            android:contentDescription="@string/back_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_back_24dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/actCadVeic"
            android:textColor="@color/colorTextWhite"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/veiculo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_gravity="center"
                android:text="@string/veiculo"
                android:textColor="@color/colorAccent"
                android:textSize="23sp"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_veiculo_24dp" />

            <EditText
                android:id="@+id/placa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placa"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="130dp"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:textSize="16sp"
                android:paddingStart="10dp"/>

            <EditText
                android:id="@+id/cor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cor"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="200dp"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:textSize="16sp"
                android:paddingStart="10dp"/>

            <EditText
                android:id="@+id/modelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/modelo"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="50dp"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:textSize="16sp"
                android:paddingStart="10dp"/>

            <EditText
                android:id="@+id/marca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/marca"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="50dp"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:textSize="16sp"
                android:paddingStart="10dp"/>

            <EditText
                android:id="@+id/capacidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/capacidade"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="300dp"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:textSize="16sp"
                android:paddingStart="10dp"/>

            <Button
                android:id="@+id/cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_gravity="center"
                android:text="@string/cadastro"
                android:textSize="14sp"
                android:background="@color/colorAccent"
                android:textColor="@color/colorTextWhite"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>