<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.schelas.schelasvans.controller.CadastroPassageiro">

    <android.support.v7.widget.Toolbar
        android:id="@+id/destool"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent">

        <ImageView
            android:id="@+id/imgNavBar"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_back_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/actCadPass"
            android:textColor="@color/colorTextWhite"
            android:textSize="16sp"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dadosPessoais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/dadosPessoais"
                android:textColor="@color/colorAccent"
                android:textSize="23sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:src="@drawable/ic_perfil_24dp"
                android:tint="@color/colorPrimary" />

            <EditText
                android:id="@+id/etNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/lbNomeCadPass"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/rEmail"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="200dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/lbFoneCadPass"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/endereco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:text="@string/Endereco"
                android:textColor="@color/colorAccent"
                android:textSize="23sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:src="@drawable/ic_mark_24dp"
                android:tint="@color/colorPrimary" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/lbAddressCadPass"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etAddressNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="150dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/lbAddressNumCadPass"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etAddressBairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/lbAddressBairroCadPass"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvCityPassageiro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerCityPassageiro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="150dp"
                android:layout_marginBottom="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnCadPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="50dp"
                android:background="@color/colorAccent"
                android:text="@string/btnCadPass"
                android:textColor="@color/colorTextWhite"
                android:textSize="14sp" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>