<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/destool"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imgNavBar"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_back_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/actRotas"
            android:textColor="@color/colorTextWhite"
            android:textSize="16sp"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRotaVeic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RotaVeiculo"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerRotaVeic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnRotaMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:text="@string/actRotaVeiculo"
                android:textSize="14sp"
                android:background="@color/colorAccent"
                android:textColor="@color/colorTextWhite"
                />

        </LinearLayout>

    </ScrollView>


</LinearLayout>